Add league statistics template and generated page

--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,9 @@
   <h1>Stat Attack!</h1>
   <p>Take a look at lots of caclulated statistics on entirely made-up data.</p>
   <ul>
-    <li><a href = './team_stats.html'>Team Statistics</a></li>
     <li><a href = './game_stats.html'>Game Statistics</a></li>
+    <li><a href = './team_stats.html'>Team Statistics</a></li>
+    <li><a href = './league_stats.html'>League and Season Statistics</a></li>
   </ul>
 </body>
 </html>
