Fix template and add season_stats table and page

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,8 @@
   <ul>
     <li><a href = './game_stats.html'>Game Statistics</a></li>
     <li><a href = './team_stats.html'>Team Statistics</a></li>
-    <li><a href = './league_stats.html'>League and Season Statistics</a></li>
+    <li><a href = './league_stats.html'>League Statistics</a></li>
+    <li><a href = './season_stats.html'>Season Statistics</a></li>
   </ul>
 </body>
 </html>
