Move erb generated tables into individual modules for better organization

--- a/site/team_stats.html
+++ b/site/team_stats.html
@@ -5,6 +5,13 @@
         <link href="stylesheet.css" rel="stylesheet">
         </head>
           <body>
+          <header>
+          <nav class="crumbs">
+            <ol>
+              <li class="crumb"><a href="./index.html">Stat Attack</a></li>
+            </ol>
+            </nav>
+          </header>
           <h1>Team Statistics</h1>
       <table>
         <thead>
